--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.5",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.4",
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
