--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.4",
     "nodemon": "^2.0.22",
+    "pg": "^8.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
