--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
@@ -27,11 +28,13 @@
     "mongoose": "^7.0.4",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0",
+    "postcss": "^8.4.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.4",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
@@ -42,8 +45,8 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
+    "postcss-loader": "^7.3.3",
     "style-loader": "^3.3.2",
-    "tailwindcss": "^3.3.3",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.3"
